--- a/bem-vindo.html
+++ b/bem-vindo.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="Estailo1OP.css">
+    <script src="iscripiti.JS"></script>
+
     <title>Bem-vindo</title>
 </head>
 <body>
