--- a/bem-vindo.html
+++ b/bem-vindo.html
@@ -5,14 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Estailo1OP.css">
     <script src="iscripiti.JS"></script>
-
-    <title>Bem-vindo</title>
+    <script>
+            setTimeout(function() {
+      window.location.href = "catalogo.html"; 
+    }, 3000); // 3000 milissegundos = 3 segundos
+    </script>
+    <title>Absolute Cinema</title
 </head>
 <body>
 
     <h2 id="mensagem">Carregando...</h2>
 
-    <button onclick="logout()">Sair</button>
+    <br><br>
 
     <script>
         const usuarioEmail = localStorage.getItem("usuarioEmail");
@@ -31,3 +35,6 @@
 
 </body>
 </html>
+
+    <!--/<button onclick="logout()">Sair</button>/--!>
+
