--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login com Supabase</title>
+    <title>Login - Absolute Cinema</title>
     <!--<link rel="stylesheet" href="estilo.css">-->
     <link rel="stylesheet" href="Estailo2OP.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=EB+Garamond&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
     <p id="mensagem"></p>
 </div>
 <div>
-    <video autoplay loop playsinline style="width: 62.5%; height: 100%; object-fit: cover;">
+    <video autoplay muted loop playsinline style="width: 65%; height: 100%; object-fit: cover;">
         <source src="Halloween Projection Loop Dancing Skeleton.mp4" type="video/mp4">
       </video>
     </div>
